text overflow style fix

--- a/src/modules/Messanger/ChatList/ChatList.css
+++ b/src/modules/Messanger/ChatList/ChatList.css
@@ -51,6 +51,11 @@
   margin-bottom: 7px;
   color: var(--accent);
   text-shadow: 0 0 2px #000;
+  white-space: nowrap;
+  max-width: 150px;
+  width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .list-item__message {
