--- a/src/modules/Messanger/Header/Header.css
+++ b/src/modules/Messanger/Header/Header.css
@@ -23,6 +23,14 @@
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
 }
 
+.chat-info__title {
+  white-space: nowrap;
+  max-width: 100%;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .header-title__settings {
   width: 30px;
   height: 30px;
